--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.17",
     "@ionic/storage": "2.1.3",
@@ -30,6 +31,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.2.0",
     "cordova-windows": "5.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -48,7 +50,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "windows"
