--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.17",
-    "@ionic/storage": "^2.1.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.2.1",
     "cordova-windows": "5.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -51,7 +50,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "windows"
