--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-windows": "^5.0.0",
+    "cors": "^2.8.5",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
